# nexrad-meta

./: .gitignore  Cargo.toml
examples/: model.rs  raw.rs
examples/data/: README.md  archive2_header
nexrad-decode/: Cargo.toml
nexrad-decode/examples/: digital_radar_data_message.rs  message_header.rs
nexrad-utils/: Cargo.toml
src/: lib.rs  model.rs  raw.rs
src/messages/digital_radar_data/: message.rs
src/raw/: archive2_header.rs  archive_2_file.rs  messages.rs
src/raw/messages/: clutter_filter_map.rs  digital_radar_data.rs  message.rs  message_header.rs  rda_status_data.rs
src/raw/messages/clutter_filter_map/: azimuth_segment.rs  elevation_segment.rs  header.rs  message.rs  range_zone.rs
src/raw/messages/digital_radar_data/: elevation_data_block.rs  generic_data_block.rs  header.rs  message.rs  pointers.rs  radial_data_block.rs  spot_blanking_status.rs  volume_data_block.rs
src/raw/messages/rda_status_data/: data_transmission_enabled.rs  message.rs  scan_data_flags.rs  volume_coverage_pattern.rs
src/raw/messages/rda_status_data/alarm/: definitions.rs  summary.rs
