[package]
name = "nexrad-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
nexrad-model = { path = "../nexrad-model", optional = true }
uom = { version = "0.36.0", optional = true }
