[package]
name = "nexrad-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexrad"
path = "src/bin/nexrad.rs"


[dependencies]
nexrad-data = { path = "../nexrad-data" }
clap = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
chrono = { workspace = true }
anyhow = "1.0"
reqwest = { workspace = true}
serde_json = "1.0.122"
